--- a/app/globals.css
+++ b/app/globals.css
@@ -26,7 +26,8 @@ body {
 .loop2 {
   white-space: nowrap;
   position: absolute;
-  top: 0; left: 0;
+  top: 0;
+  left: 0;
   animation: loop 60s -30s linear infinite;
 }
 
@@ -50,5 +51,11 @@ body {
   textarea {
     font-size: 16px !important;
     -webkit-text-size-adjust: 100%;
+  }
+}
+
+@media (max-height: 450px) {
+  .hide-when-short {
+    display: none !important;
   }
 }
