--- a/app/globals.css
+++ b/app/globals.css
@@ -6,6 +6,15 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+.input-date {
+  appearance: none;
+  -webkit-appearance: none;
+}
+.input-date::-webkit-calendar-picker-indicator {
+  opacity: 0;
+  display: none;
+}
+
 .lp-mode {
   display: none;
 }
